--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body,
   height: 100%;
   width: 100%;
   font-family: "Source Sans Pro", sans-serif;
+  overflow-y: scroll;
 }
 
 .app {
@@ -16,7 +17,7 @@ body,
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  display: none;
 }
 
 /* Track */
